metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/Platinum_Offer_Item_Feedback__c.object-meta.xml
<CustomObject>
    <description>LAMBDA-53172 Object to capture customer&apos;s feedback for the Platinum offering item</description>
    <label>Platinum Offer Feedback</label>
    <nameField>
        <displayFormat>POIF-{00000}</displayFormat>
        <label>Platinum Offer Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platinum Offer Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>