metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <description>LAMBDA-53172 URL of the recording of the call taken place</description>
    <inlineHelpText>URL of the recording</inlineHelpText>
    <label>Call Recording</label>
    <type>Url</type>
</CustomField>