metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Call_Task__c.field-meta.xml
<CustomField>
    <fullName>Call_Task__c</fullName>
    <description>LAMBDA-53172 The URL of the task related to this feedback</description>
    <inlineHelpText>URL of the related Task record</inlineHelpText>
    <label>Call Task</label>
    <type>Url</type>
</CustomField>