metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Customer_Interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interest__c</fullName>
    <description>LAMBDA-53172 Capture the interest that customer might exhibit for the</description>
    <inlineHelpText>Capture Customer interest in the Platinum Offer item</inlineHelpText>
    <label>Customer Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not relevant</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t add significant value</fullName>
            </value>
            <value>
                <fullName>Not a priority, maybe in the future</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Using third-party service - won&apos;t consider</fullName>
            </value>
            <value>
                <fullName>Doing it in-house - won&apos;t consider</fullName>
            </value>
            <value>
                <fullName>Reseller offers the service</fullName>
            </value>
            <value>
                <fullName>Unhappy with past delivery</fullName>
            </value>
            <value>
                <fullName>Previously included in subscription</fullName>
            </value>
            <value>
                <fullName>Not qualified to answer</fullName>
            </value>
            <value>
                <fullName>Unclear feedback</fullName>
            </value>
            <value>
                <fullName>Customer won&apos;t engage</fullName>
            </value>
            <value>
                <fullName>Not Discussed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
                <isActive>false</isActive>
                <label>Negative</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <isActive>false</isActive>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Positive</fullName>
                <isActive>false</isActive>
                <label>Positive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>