metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <description>Formula field to fetch category from Related field</description>
    <formula>TEXT(Platinum_Offer_Item__r.Category__c)</formula>
    <inlineHelpText>Category of the Platinum Offer Item</inlineHelpText>
    <label>Item Category</label>
    <type>Text</type>
</CustomField>