metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LAMBDA-53172 Lookup to the related opportunity</description>
    <inlineHelpText>Lookup to the related opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Platinum Offer Feedback</relationshipLabel>
    <relationshipName>Platinum_Offer_Item_Feedbacks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>