metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Platinum_Offer_Item__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Offer_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LAMBDA-53172 Capture lookup to Platinum offer item record</description>
    <inlineHelpText>Related Platinum offer item record</inlineHelpText>
    <label>Platinum Offer Item</label>
    <referenceTo>Platinum_Offer_Item__c</referenceTo>
    <relationshipName>Platinum_Offer_Item_Feedbacks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>