metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Field to bring information about Service from the related Platinum offer item object</description>
    <formula>Platinum_Offer_Item__r.Service__c</formula>
    <inlineHelpText>Service of the related item</inlineHelpText>
    <label>Service</label>
    <type>Text</type>
</CustomField>