metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/String_Use_for_QBR__c.field-meta.xml
<CustomField>
    <fullName>String_Use_for_QBR__c</fullName>
    <description>Is used for Quicksight reporting. The checkbox loaded via a report is not loaded correctly in Quicksight</description>
    <formula>IF(Use_for_QBR__c, &quot;Yes&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is used for Quicksight reporting. The checkbox loaded via a report is not loaded correctly in Quicksight</inlineHelpText>
    <label>String_Use_for_MBR</label>
    <type>Text</type>
</CustomField>