metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <inlineHelpText>Task related to this feedback record</inlineHelpText>
    <label>TaskId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>