metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <description>LAMBDA-53172 capture the time stamp of the interaction. Auto generated</description>
    <inlineHelpText>Capture the time stamp of recording from where the Platinum offer was discussed</inlineHelpText>
    <label>Time Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>