metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Feedback__c/fields/Use_for_QBR__c.field-meta.xml
<CustomField>
    <fullName>Use_for_QBR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LAMBDA-53172 Indicate that this interaction can be used for QBR and be included in BU reports</description>
    <inlineHelpText>Mark this interaction if it is suited for QBR</inlineHelpText>
    <label>Use for MBR</label>
    <type>Checkbox</type>
</CustomField>